--- a/projects/Udemy Search By course name/Code/Udemy Search by course Name/project.json
+++ b/projects/Udemy Search By course name/Code/Udemy Search by course Name/project.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "UiPath.Excel.Activities": "[2.24.0-preview]",
     "UiPath.Mail.Activities": "[1.23.11]",
+    "UiPath.Persistence.Activities": "[1.5.14-preview]",
     "UiPath.System.Activities": "[24.12.1-preview]",
     "UiPath.Testing.Activities": "[24.10.0]",
     "UiPath.UIAutomation.Activities": "[24.11.1-preview]"
@@ -43,7 +44,12 @@
     "processOptions": {
       "ignoredFiles": []
     },
-    "fileInfoCollection": [],
+    "fileInfoCollection": [
+      {
+        "templateType": "Generic",
+        "fileName": ".templates\\UdemySearchProjectTemplate.xaml"
+      }
+    ],
     "saveToCloud": false
   },
   "expressionLanguage": "VisualBasic",
