--- a/projects/Youtube Play List Data scraping/Code/project.json
+++ b/projects/Youtube Play List Data scraping/Code/project.json
@@ -14,7 +14,7 @@
   "entitiesStores": [],
   "schemaVersion": "4.0",
   "studioVersion": "24.10.4.0",
-  "projectVersion": "1.0.0",
+  "projectVersion": "1.0.1",
   "runtimeOptions": {
     "autoDispose": false,
     "netFrameworkLazyLoading": false,
@@ -63,6 +63,8 @@
   ],
   "isTemplate": false,
   "templateProjectData": {},
-  "publishData": {},
+  "publishData": {
+    "iconUrl": ".package/LoR.jpg"
+  },
   "targetFramework": "Windows"
 }
