--- a/projects/Tomato And IMDB compination Movie Search/Code/Movie Search/project.json
+++ b/projects/Tomato And IMDB compination Movie Search/Code/Movie Search/project.json
@@ -2,7 +2,7 @@
   "name": "Movie Search",
   "projectId": "9191cd02-ffa8-4bd6-bb4c-62c9beba65d7",
   "description": "Blank Process",
-  "main": "All Project Intgration(Main).xaml",
+  "main": "State Machine All Fiels Integration.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.24.0-preview]",
     "UiPath.Mail.Activities": "[1.23.11]",
@@ -57,6 +57,12 @@
     {
       "filePath": "All Project Intgration(Main).xaml",
       "uniqueId": "c2512151-608b-4791-8c9f-9d179adaade0",
+      "input": [],
+      "output": []
+    },
+    {
+      "filePath": "State Machine All Fiels Integration.xaml",
+      "uniqueId": "b6a6660b-6f40-42c8-be82-b38ef77ad24d",
       "input": [],
       "output": []
     }
